minor method readability fixes